--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bhumio_assignment",
   "version": "0.0.1",
-  "description": "",
+  "description": "<p align=\"center\">   <a href=\"http://nestjs.com/\" target=\"blank\"><img src=\"https://nestjs.com/img/logo-small.svg\" width=\"120\" alt=\"Nest Logo\" /></a> </p>",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
@@ -27,7 +27,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/sequelize": "^11.0.0",
+    "@nestjs/swagger": "^11.2.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/sequelize": "^4.28.20",
+    "bcrypt": "^6.0.0",
+    "express-session": "^1.18.2",
+    "hbs": "^4.2.0",
     "nest-commander": "^3.17.0",
     "pg": "^8.16.2",
     "pg-hstore": "^2.3.4",
@@ -47,6 +52,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
@@ -81,5 +87,10 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "keywords": []
 }
