feat: login, session management

--- a/package.json
+++ b/package.json
@@ -29,10 +29,15 @@
     "@nestjs/sequelize": "^11.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/express-handlebars": "^5.3.1",
     "@types/sequelize": "^4.28.20",
+    "@types/session-file-store": "^1.2.5",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "express-flash": "^0.0.2",
+    "express-handlebars": "^8.0.3",
     "express-session": "^1.18.2",
-    "hbs": "^4.2.0",
     "nest-commander": "^3.17.0",
     "pg": "^8.16.2",
     "pg-hstore": "^2.3.4",
@@ -41,6 +46,7 @@
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
+    "session-file-store": "^1.5.0",
     "umzug": "^3.8.2"
   },
   "devDependencies": {
