--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,11 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "esModuleInterop": true
+    // "strictNullChecks": true, //this is causing issue with Sequelize Model extending (look into it)
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "noFallthroughCasesInSwitch": false,
+    "useDefineForClassFields": false
   }
 }
