--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "cli:command": "ts-node src/cli"
   },
   "dependencies": {
+    "@bull-board/api": "^6.12.0",
+    "@bull-board/express": "^6.12.0",
+    "@bull-board/nestjs": "^6.12.0",
+    "@nestjs/bull": "^11.0.3",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/sequelize": "^11.0.0",
@@ -33,6 +38,7 @@
     "@types/sequelize": "^4.28.20",
     "@types/session-file-store": "^1.2.5",
     "bcrypt": "^6.0.0",
+    "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "express-flash": "^0.0.2",
