add: test cases

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,17 @@ PORT=3000
 #Database Config
 DB_URI=postgres://<username>:<password>@<host>:<port>/<database>
 DB_LOGGING=false
+
+#Session Config
+SESSION_SECRET=
+SESSION_COOKIE_MAX_AGE=86400000
+
+# documenso
+DOCUMENSO_BASE_URL=
+DOCUMENSO_API_TOKEN=
+SIGNING_ORDER=PARALLEL_OR_SEQUENTIAL
+
+#Redis
+REDIS_QUEUE_HOST=localhost
+REDIS_QUEUE_PORT=6379
+REDIS_QUEUE_PREFIX=
